--- a/client/Ntreev.Crema.ApplicationHost/packages.config
+++ b/client/Ntreev.Crema.ApplicationHost/packages.config
@@ -43,6 +43,9 @@ Sample license text.
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net45" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net45" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net45" />
-  <package id="Xceed.Wpf.AvalonDock" version="3.4.17280.14430" targetFramework="net45" />
-  <package id="Xceed.Wpf.Toolkit" version="3.4.17280.14430" targetFramework="net45" />
+  <package id="Xceed.Products.Wpf.DataGrid.Base" version="6.5.18204.20220" targetFramework="net45" />
+  <package id="Xceed.Products.Wpf.Toolkit.Base" version="3.6.17613.09190" targetFramework="net45" />
+  <package id="Xceed.Wpf.Controls" version="6.5.18204.20220" targetFramework="net45" />
+  <package id="Xceed.Wpf.DataGrid" version="6.5.18204.20220" targetFramework="net45" />
+  <package id="Xceed.Wpf.Toolkit" version="3.6.17613.09190" targetFramework="net45" />
 </packages>
