--- a/client/Ntreev.Crema.Client.Framework/packages.config
+++ b/client/Ntreev.Crema.Client.Framework/packages.config
@@ -6,6 +6,9 @@ Sample license text.
   <package id="Caliburn.Micro" version="3.1.0" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="3.1.0" targetFramework="net45" />
   <package id="ModernUI.WPF" version="1.0.9" targetFramework="net45" />
-  <package id="Xceed.Wpf.AvalonDock" version="3.4.17280.14430" targetFramework="net45" />
-  <package id="Xceed.Wpf.Toolkit" version="3.4.17280.14430" targetFramework="net45" />
+  <package id="Xceed.Products.Wpf.DataGrid.Base" version="6.5.18204.20220" targetFramework="net45" />
+  <package id="Xceed.Products.Wpf.Toolkit.Base" version="3.6.17613.09190" targetFramework="net45" />
+  <package id="Xceed.Wpf.Controls" version="6.5.18204.20220" targetFramework="net45" />
+  <package id="Xceed.Wpf.DataGrid" version="6.5.18204.20220" targetFramework="net45" />
+  <package id="Xceed.Wpf.Toolkit" version="3.6.17613.09190" targetFramework="net45" />
 </packages>
